test/errors/wrong_return_type.sl
# expect: COMPERROR
auto fn = () -> fixed {
    return "hello";
};
